--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
-    <title>React App</title>
+    <title>Voyago</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
