admin,agent dashboard and logo changed!

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dk4darniv/image/upload/v1690722657/voyago%20logo/voyago-high-resolution-color-logo_1_mjopqw.webp" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dk4darniv/image/upload/v1690722657/voyago%20logo/voyago-high-resolution-color-logo_1_mjopqw.webp" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
