--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dk4darniv/image/upload/v1690722657/voyago%20logo/voyago-high-resolution-color-logo_1_mjopqw.webp" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dk4darniv/image/upload/v1690722657/voyago%20logo/voyago-high-resolution-color-logo_1_mjopqw.webp" />
+    <link rel="icon" type="image/png"  href="https://res.cloudinary.com/dk4darniv/image/upload/v1690747046/logo-white-removebg-preview_2_wnou0a.png" />
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dk4darniv/image/upload/v1690746318/logo-white-removebg-preview_2_wnou0a.png" /> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
